# Example.CMakeWithGithub

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  release_github.yml
Example.CMakeWithGithub/: CMakeLists.txt
application/: CMakeLists.txt
